[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tukuy"
version = "0.0.18"
description = "A flexible data transformation library with a plugin system"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Juan Denis", email = "juan@vene.co" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "python-slugify>=4.0.0",
]

[project.optional-dependencies]
html = [
    "beautifulsoup4>=4.9.0",
    "html5lib>=1.1",
]
web = [
    "httpx>=0.24.0",
]
http = [
    "httpx>=0.24.0",
]
conversion = [
    "pyyaml>=6.0",
]
all = [
    "beautifulsoup4>=4.9.0",
    "html5lib>=1.1",
    "httpx>=0.24.0",
    "pyyaml>=6.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "beautifulsoup4>=4.9.0",
    "html5lib>=1.1",
    "httpx>=0.24.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/jhd3197/tukuy"
Repository = "https://github.com/jhd3197/tukuy"

[tool.setuptools.packages.find]
exclude = ["tests*", "doc*", "venv*"]
